--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,15 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="/style.css">
+    <style>
+      body {
+        overscroll-behavior: contain;
+      }
+
+      html {
+        scroll-behavior: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
